Include Karla font

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -25,6 +25,7 @@
  |
  */
 @import "fonts/roboto";
+@import url('https://fonts.googleapis.com/css2?family=Karla&display=swap');
 
 /*
  |--------------------------------------------------------------------------
